# ThetaSwarm

./: CMakeLists.txt  README.md  config.json  main.cpp
ArucoTracking/: CMakeLists.txt  arucoDetection.cpp  arucoDetection.h
CameraCalibration/: calibration.yml  calibration1.yml  calibration2.yml  calibration3.yml  calibrationCustom1.yml  calibrationNoNormal.yml  calibrationSJ1.yml
Common/: common.cpp  common.h
CommonFunctions/: CMakeLists.txt  common.cpp  common.h
RobotCommands/: CMakeLists.txt  sendMotorCommands.cpp  sendMotorCommands.h
SwarmControl/: CMakeLists.txt  swarm.cpp  swarm.h
SwarmControl/MotionPlanning/: CMakeLists.txt  kinematics.h  navigation.h
SwarmControl/MotionPlanning/src/: kinematics.cpp  navigation.cpp  pathPlanning.cpp
SwarmControl/PathPlanning/: CMakeLists.txt  navigation.cpp  navigation.h
SwarmControl/RobotControl/: CMakeLists.txt  autoMR.h  sendRobotCommands.h  udp_client_server.h
SwarmControl/RobotControl/src/: autoMR.cpp  sendRobotCommands.cpp  udpClient.cpp
SwarmControl/RobotObject/: CMakeLists.txt  autoMR.cpp  autoMR.h
SwarmControl/RobotObject/RobotCommands/: CMakeLists.txt  sendMotorCommands.cpp  sendMotorCommands.h  sendRobotCommands.cpp  sendRobotCommands.h
SwarmControl/RobotObject/RobotCommands/Client/: CMakeLists.txt  udpClient.cpp  udp_client_server.h
SwarmControl/RobotObject/TrajectoryPlanning/: CMakeLists.txt  trajectoryPlanning.cpp
SwarmControl/RobotObject/TrajectoryPlanning/Kinematics/: CMakeLists.txt  kinematics.cpp  kinematics.h
SwarmControl/RobotObject/TrajectoryPlanning/PathPlanning/: CMakeLists.txt  navigation.cpp
SwarmControl/src/: CMakeLists.txt  autoMR.cpp  autoMR.h  kinematics.cpp  kinematics.h  navigation.cpp  navigation.h  sendRobotCommands.cpp  sendRobotCommands.h  udpClient.cpp  udp_client_server.h
TrajectoryPlanning/: CMakeLists.txt  trajectoryPlanning.cpp
TrajectoryPlanning/Feedback/: CMakeLists.txt  feedback.cpp  feedback.h
TrajectoryPlanning/Kinematics/: CMakeLists.txt  kinematics.cpp  kinematics.h
TrajectoryPlanning/Kinematics/Feedback/: CMakeLists.txt  feedback.cpp  feedback.h
TrajectoryPlanning/PathPlanning/: CMakeLists.txt  navigation.cpp  navigation.h
util/: util.cpp  util.h
